# develop_envir

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
GestureOnDevice/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
GestureOnDevice/components/esp32-camera/driver/include/: sensor.h
GestureOnDevice/components/tflite-lib/tensorflow/lite/micro/kernels/: strided_slice.cc
GestureOnDevice/components/tflite-lib/tensorflow/lite/micro/memory_planner/: greedy_memory_planner.cc  linear_memory_planner.cc
GestureOnDevice/main/: CMakeLists.txt  app_button.c  app_button.h  app_camera_esp.c  app_camera_esp.h  detection_responder.cc  detection_responder.h  esp_lcd.c  esp_lcd.h  esp_main.h  gesture_model_data.h  image_provider.cc  image_provider.h  inference_responder.cc  inference_responder.h  main.cc  main_functions.cc  main_functions.h  model_settings.cc  model_settings.h
stream/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
stream/components/modules/: CMakeLists.txt
stream/components/modules/camera/: who_camera.c
stream/components/modules/web/: app_httpd.cpp
stream/main/: app_main.cpp
